--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Checkout code
@@ -26,8 +26,6 @@ jobs:
             sudo apt-get install -y cmake g++ # For Ubuntu
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             brew install cmake                  # For macOS
-          elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            choco install cmake -y             # For Windows
           fi
 
       - name: Install dependencies
@@ -36,8 +34,6 @@ jobs:
             sudo apt-get install -y g++ make nlohmann-json-dev
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             brew install gcc nlohmann-json
-          elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            choco install mingw -y
             # You might need to manually download and install nlohmann_json for Windows
           fi
 
@@ -56,10 +52,6 @@ jobs:
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             # Create a macOS installer (e.g., .dmg)
             hdiutil create -volname MyApp -srcfolder ./build -ov -format UDZO MyApp.dmg
-          elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            # Create a Windows installer (e.g., .exe using NSIS)
-            choco install nsis -y
-            makensis myinstaller.nsi
           fi
 
       - name: Upload Artifacts
@@ -69,7 +61,6 @@ jobs:
           path: |
             ${{ matrix.os == 'ubuntu-latest' && 'my_executable.deb' }}
             ${{ matrix.os == 'macos-latest' && 'MyApp.dmg' }}
-            ${{ matrix.os == 'windows-latest' && 'my_installer.exe' }}
 
     continue-on-error: true # Continue with other jobs even if one fails
 
