--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            sudo apt-get install -y g++ make nlohmann-json-dev
+            sudo apt-get install -y g++ make nlohmann-json3-dev
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             brew install gcc nlohmann-json
             # You might need to manually download and install nlohmann_json for Windows
