Fixed few things i keep forgetting :)[32;2u
well now fixed so yay 😂

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
             # Create a Linux installer (e.g., .deb or .AppImage)
             sudo apt-get install ruby-dev build-essential && sudo gem i fpm -f
-            fpm -s dir -t deb ./build/my_executable /usr/local/bin/my_executable
+            fpm -s dir -t deb ./build/CMakeBoilerplateGenerator /usr/local/bin/CMakeBoilerplateGenerator
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             # Create a macOS installer (e.g., .dmg)
             hdiutil create -volname MyApp -srcfolder ./build -ov -format UDZO MyApp.dmg
