--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Build
         run: cmake --build build --config Release
 
+      - name: List Build Files
+        run: ls -R ./build
+
       - name: Create Installer
         run: |
           if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
