--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,9 @@ jobs:
           if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
             # Create a Linux installer (e.g., .deb or .AppImage)
             sudo apt-get install ruby-dev build-essential && sudo gem i fpm -f
-            fpm -s dir -t deb ./build/CMakeBoilerplateGenerator --prefix=/usr/local/bin
+            zip ./CMakeBoilerplateGenerator.zip ./build/CMakeBoilerplateGenerator
+            # Create the Debian package from the zip file
+            fpm -s zip -t deb --prefix /usr/bin -n CMakeBoilerplateGenerator -v 1.0.0 ./CMakeBoilerplateGenerator.zip
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             # Create a macOS installer (e.g., .dmg)
             hdiutil create -volname MyApp -srcfolder ./build -ov -format UDZO MyApp.dmg
