--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           name: installer-${{ matrix.os }}
           path: |
-            ${{ matrix.os == 'ubuntu-latest' && 'CMakeBoilerplateGenerator.deb' }}
+            ${{ matrix.os == 'ubuntu-latest' && 'cmakeboilerplategenerator_1.0.0_amd64.deb' }}
             ${{ matrix.os == 'macos-latest' && 'CMakeBoilerplateGenerator.dmg' }}
 
     continue-on-error: true # Continue with other jobs even if one fails
